--- a/PPl3/bin/PPl3.dll.config
+++ b/PPl3/bin/PPl3.dll.config
@@ -14,9 +14,17 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.8" />
+      </system.Web>
+  -->
   <system.web>
-    <compilation debug="true" targetFramework="4.8.1" />
-    <httpRuntime targetFramework="4.8.1" />
+    <compilation debug="true" targetFramework="4.8" />
+    <httpRuntime targetFramework="4.8" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -61,10 +69,8 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="PPL3Entities" connectionString="metadata=res://*/Models.PPL3.csdl|res://*/Models.PPL3.ssdl|res://*/Models.PPL3.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-NG0LH2VR\SQLEXPRESS;initial catalog=PPL3;persist security info=True;user id=sa;password=0838664246;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="PPL3Entities1" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-NG0LH2VR\SQLEXPRESS;initial catalog=PPL3;persist security info=True;user id=sa;password=0838664246;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="PPL3Entitie1" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-NG0LH2VR\SQLEXPRESS;initial catalog=PPL3;persist security info=True;user id=sa;password=0838664246;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+
+  <add name="PPL3Entitie1" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-FP7T5TD4\SQLEXPRESS;initial catalog=PPL3;persist security info=True;user id=sa;password=vuigame1;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
