--- a/PPl3/bin/PPl3.dll.config
+++ b/PPl3/bin/PPl3.dll.config
@@ -73,9 +73,8 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="PPL3Entities3" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-FP7T5TD4\SQLEXPRESS;initial catalog=PPL3;persist security info=True;user id=sa;password=vuigame1;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="PPL3Entities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-NG0LH2VR\SQLEXPRESS;initial catalog=PPL3;persist security info=True;user id=sa;password=0838664246;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+   
+  <add name="PPL3Entities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-FP7T5TD4\SQLEXPRESS;initial catalog=PPL3;persist security info=True;user id=sa;password=vuigame1;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
