fix xong booking hotel và xong phần thêm ảnh

--- a/PPl3/PPl3.csproj
+++ b/PPl3/PPl3.csproj
@@ -335,30 +335,6 @@
     <Content Include="ExtraFiles\assets\css\style_v1.css" />
     <Content Include="ExtraFiles\assets\css\Trip.css" />
     <Content Include="ExtraFiles\assets\css\wishList.css" />
-    <Content Include="ExtraFiles\assets\img\background_signLog\pexels-photo-984888.jpeg" />
-    <Content Include="ExtraFiles\assets\img\img_profile\900_lagaleriedelamour_Robert Viglasky.jpg" />
-    <Content Include="ExtraFiles\assets\img\room_classify\10ce1091-c854-40f3-a2fb-defc2995bcaf.jpg" />
-    <Content Include="ExtraFiles\assets\img\room_classify\33848f9e-8dd6-4777-b905-ed38342bacb9.jpg" />
-    <Content Include="ExtraFiles\assets\img\room_classify\3fb523a0-b622-4368-8142-b5e03df7549b.jpg" />
-    <Content Include="ExtraFiles\assets\img\room_classify\5cdb8451-8f75-4c5f-a17d-33ee228e3db8.jpg" />
-    <Content Include="ExtraFiles\assets\img\room_classify\687a8682-68b3-4f21-8d71-3c3aef6c1110.jpg" />
-    <Content Include="ExtraFiles\assets\img\room_classify\732edad8-3ae0-49a8-a451-29a8010dcc0c %281%29.jpg" />
-    <Content Include="ExtraFiles\assets\img\room_classify\732edad8-3ae0-49a8-a451-29a8010dcc0c.jpg" />
-    <Content Include="ExtraFiles\assets\img\room_classify\8b44f770-7156-4c7b-b4d3-d92549c8652f.jpg" />
-    <Content Include="ExtraFiles\assets\img\room_classify\8e507f16-4943-4be9-b707-59bd38d56309.jpg" />
-    <Content Include="ExtraFiles\assets\img\room_classify\8eccb972-4bd6-43c5-ac83-27822c0d3dcd.jpg" />
-    <Content Include="ExtraFiles\assets\img\room_classify\a4634ca6-1407-4864-ab97-6e141967d782.jpg" />
-    <Content Include="ExtraFiles\assets\img\room_classify\bcd1adc0-5cee-4d7a-85ec-f6730b0f8d0c %281%29.jpg" />
-    <Content Include="ExtraFiles\assets\img\room_classify\bcd1adc0-5cee-4d7a-85ec-f6730b0f8d0c.jpg" />
-    <Content Include="ExtraFiles\assets\img\room_classify\c027ff1a-b89c-4331-ae04-f8dee1cdc287.jpg" />
-    <Content Include="ExtraFiles\assets\img\room_classify\c0a24c04-ce1f-490c-833f-987613930eca.jpg" />
-    <Content Include="ExtraFiles\assets\img\room_classify\c5a4f6fc-c92c-4ae8-87dd-57f1ff1b89a6.jpg" />
-    <Content Include="ExtraFiles\assets\img\room_classify\c9157d0a-98fe-4516-af81-44022118fbc7.jpg" />
-    <Content Include="ExtraFiles\assets\img\room_classify\ddd13204-a5ae-4532-898c-2e595b1bb15f.jpg" />
-    <Content Include="ExtraFiles\assets\img\room_classify\ed8b9e47-609b-44c2-9768-33e6a22eccb2.jpg" />
-    <Content Include="ExtraFiles\assets\img\room_classify\f0c5ca0f-5aa0-4fe5-b38d-654264bacddf.jpg" />
-    <Content Include="ExtraFiles\assets\img\Room_type\home.png" />
-    <Content Include="ExtraFiles\assets\img\Where_add\f9ec8a23-ed44-420b-83e5-10ff1f071a13.jpg" />
     <Content Include="ExtraFiles\editProfile.html" />
     <Content Include="ExtraFiles\index.html" />
     <Content Include="ExtraFiles\JS\calendar.js" />
@@ -431,6 +407,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Uploads\HỒ SỸ THẢO.JPG" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -474,11 +451,6 @@
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
     <Content Include="Areas\User\Views\HomeUser\Index.cshtml" />
-    <Content Include="ExtraFiles\assets\img\Where_add\42a1fb0f-214c-41ec-b9d7-135fbbdb8316.webp" />
-    <Content Include="ExtraFiles\assets\img\Where_add\4e762891-75a3-4fe1-b73a-cd7e673ba915.webp" />
-    <Content Include="ExtraFiles\assets\img\Where_add\7b5cf816-6c16-49f8-99e5-cbc4adfd97e2.webp" />
-    <Content Include="ExtraFiles\assets\img\Where_add\924d2b73-6c65-4d04-a2ad-bbc028299658.webp" />
-    <Content Include="ExtraFiles\assets\img\Where_add\c193e77c-0b2b-4f76-8101-b869348d8fc4.webp" />
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.7.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.7.1.min.map" />
