up lên giao diện của add hotel

--- a/PPl3/PPl3.csproj
+++ b/PPl3/PPl3.csproj
@@ -333,27 +333,83 @@
     <Content Include="ExtraFiles\assets\css\editProfile.css" />
     <Content Include="ExtraFiles\assets\css\gird.css" />
     <Content Include="ExtraFiles\assets\css\headerGuest.css" />
+    <Content Include="ExtraFiles\assets\css\hotel.css" />
     <Content Include="ExtraFiles\assets\css\Listing.css" />
     <Content Include="ExtraFiles\assets\css\product.css" />
     <Content Include="ExtraFiles\assets\css\profile.css" />
+    <Content Include="ExtraFiles\assets\css\revenue.css" />
     <Content Include="ExtraFiles\assets\css\seller_profile.css" />
     <Content Include="ExtraFiles\assets\css\Sign_Log_v1.css" />
     <Content Include="ExtraFiles\assets\css\personal_infor.css" />
     <Content Include="ExtraFiles\assets\css\style_v1.css" />
     <Content Include="ExtraFiles\assets\css\Trip.css" />
     <Content Include="ExtraFiles\assets\css\wishList.css" />
+    <Content Include="ExtraFiles\assets\Image\button-151.png" />
+    <Content Include="ExtraFiles\assets\Image\button-171.png" />
+    <Content Include="ExtraFiles\assets\Image\button-detail0.png" />
+    <Content Include="ExtraFiles\assets\Image\image-10.png" />
+    <Content Include="ExtraFiles\assets\Image\image-100.png" />
+    <Content Include="ExtraFiles\assets\Image\image-110.png" />
+    <Content Include="ExtraFiles\assets\Image\image-120.png" />
+    <Content Include="ExtraFiles\assets\Image\image-130.png" />
+    <Content Include="ExtraFiles\assets\Image\image-140.png" />
+    <Content Include="ExtraFiles\assets\Image\image-150.png" />
+    <Content Include="ExtraFiles\assets\Image\image-160.png" />
+    <Content Include="ExtraFiles\assets\Image\image-170.png" />
+    <Content Include="ExtraFiles\assets\Image\image-180.png" />
+    <Content Include="ExtraFiles\assets\Image\image-190.png" />
+    <Content Include="ExtraFiles\assets\Image\image-20.png" />
+    <Content Include="ExtraFiles\assets\Image\image-200.png" />
+    <Content Include="ExtraFiles\assets\Image\image-210.png" />
+    <Content Include="ExtraFiles\assets\Image\image-220.png" />
+    <Content Include="ExtraFiles\assets\Image\image-230.png" />
+    <Content Include="ExtraFiles\assets\Image\image-240.png" />
+    <Content Include="ExtraFiles\assets\Image\image-250.png" />
+    <Content Include="ExtraFiles\assets\Image\image-260.png" />
+    <Content Include="ExtraFiles\assets\Image\image-270.png" />
+    <Content Include="ExtraFiles\assets\Image\image-280.png" />
+    <Content Include="ExtraFiles\assets\Image\image-290.png" />
+    <Content Include="ExtraFiles\assets\Image\image-30.png" />
+    <Content Include="ExtraFiles\assets\Image\image-300.png" />
+    <Content Include="ExtraFiles\assets\Image\image-310.png" />
+    <Content Include="ExtraFiles\assets\Image\image-320.png" />
+    <Content Include="ExtraFiles\assets\Image\image-330.png" />
+    <Content Include="ExtraFiles\assets\Image\image-340.png" />
+    <Content Include="ExtraFiles\assets\Image\image-360.png" />
+    <Content Include="ExtraFiles\assets\Image\image-370.png" />
+    <Content Include="ExtraFiles\assets\Image\image-380.png" />
+    <Content Include="ExtraFiles\assets\Image\image-390.png" />
+    <Content Include="ExtraFiles\assets\Image\image-40.png" />
+    <Content Include="ExtraFiles\assets\Image\image-420.png" />
+    <Content Include="ExtraFiles\assets\Image\image-430.png" />
+    <Content Include="ExtraFiles\assets\Image\image-50.png" />
+    <Content Include="ExtraFiles\assets\Image\image-60.png" />
+    <Content Include="ExtraFiles\assets\Image\image-80.png" />
+    <Content Include="ExtraFiles\assets\Image\image-90.png" />
+    <Content Include="ExtraFiles\assets\Image\image-button-110.png" />
+    <Content Include="ExtraFiles\assets\Image\image-button-120.png" />
+    <Content Include="ExtraFiles\assets\Image\image-button-310.png" />
+    <Content Include="ExtraFiles\assets\Image\image-button-320.png" />
+    <Content Include="ExtraFiles\assets\Image\image-button-330.png" />
+    <Content Include="ExtraFiles\assets\video_3d\H0101WTUG2qWbyFhy02jlOggSkpsM9H02VOWN52g02oxhDVM.mp4" />
+    <Content Include="ExtraFiles\assets\video_3d\KeNKUpa01dRaT5g00SSBV95FqXYkqf01DJdzn01F1aT00vCI.mp4" />
+    <Content Include="ExtraFiles\assets\video_3d\zFaydEaihX6LP01x8TSCl76WHblb01Z01RrFELxyCXoNek.mp4" />
     <Content Include="ExtraFiles\editProfile.html" />
     <Content Include="ExtraFiles\hotel.html" />
     <Content Include="ExtraFiles\index.html" />
     <Content Include="ExtraFiles\JS\calendar.js" />
     <Content Include="ExtraFiles\JS\editProfile.js" />
     <Content Include="ExtraFiles\JS\first_header.js" />
+    <Content Include="ExtraFiles\JS\hotel.js" />
     <Content Include="ExtraFiles\JS\imgSlide.js" />
     <Content Include="ExtraFiles\JS\Listing.js" />
     <Content Include="ExtraFiles\JS\main_v1.js" />
     <Content Include="ExtraFiles\JS\menuGuest.js" />
+    <Content Include="ExtraFiles\JS\newFile.1.js" />
+    <Content Include="ExtraFiles\JS\newFile.js" />
     <Content Include="ExtraFiles\JS\personal_infor.js" />
     <Content Include="ExtraFiles\JS\product.js" />
+    <Content Include="ExtraFiles\JS\revenue.js" />
     <Content Include="ExtraFiles\JS\room_classifi_v1.js" />
     <Content Include="ExtraFiles\JS\seller_profile.js" />
     <Content Include="ExtraFiles\JS\showAll.js" />
@@ -363,6 +419,7 @@
     <Content Include="ExtraFiles\JS\wishList.js" />
     <Content Include="ExtraFiles\Listing.html" />
     <Content Include="ExtraFiles\Product.html" />
+    <Content Include="ExtraFiles\revenue.html" />
     <Content Include="ExtraFiles\Sign_Log.html" />
     <Content Include="ExtraFiles\test.html" />
     <Content Include="ExtraFiles\Trip.html" />
@@ -409,6 +466,7 @@
     <Content Include="Models\Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
     </Content>
+    <Content Include="Areas\Host\Views\HomeHost\addHotel.cshtml" />
     <None Include="Scripts\jquery-3.7.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.7.1.js" />
     <Content Include="Scripts\jquery-3.7.1.min.js" />
