--- a/PPl3/PPl3.csproj
+++ b/PPl3/PPl3.csproj
@@ -365,6 +365,9 @@
     <Compile Include="Models\users_languages.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\user_notification.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\user_personalInfor.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -407,6 +410,7 @@
     <Content Include="ExtraFiles\assets\css\hotel.css" />
     <Content Include="ExtraFiles\assets\css\Listing.css" />
     <Content Include="ExtraFiles\assets\css\message.css" />
+    <Content Include="ExtraFiles\assets\css\notification.css" />
     <Content Include="ExtraFiles\assets\css\payfailstyle.css" />
     <Content Include="ExtraFiles\assets\css\paysuccessstyle.css" />
     <Content Include="ExtraFiles\assets\css\product.css" />
@@ -548,6 +552,7 @@
     <Content Include="Areas\User\Views\HomeUser\VnpayReturn.cshtml" />
     <Content Include="Areas\User\Views\HomeUser\PaymentSuccess.cshtml" />
     <Content Include="Areas\User\Views\HomeUser\PaymentFail.cshtml" />
+    <Content Include="Areas\User\Views\HomeUser\notification.cshtml" />
     <EntityDeploy Include="Models\Model1.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>Model1.Designer.cs</LastGenOutput>
