--- a/PPl3/PPl3.csproj
+++ b/PPl3/PPl3.csproj
@@ -408,6 +408,7 @@
     <Content Include="ExtraFiles\assets\css\gird.css" />
     <Content Include="ExtraFiles\assets\css\headerGuest.css" />
     <Content Include="ExtraFiles\assets\css\hotel.css" />
+    <Content Include="ExtraFiles\assets\css\invoice.css" />
     <Content Include="ExtraFiles\assets\css\Listing.css" />
     <Content Include="ExtraFiles\assets\css\message.css" />
     <Content Include="ExtraFiles\assets\css\notification.css" />
@@ -560,6 +561,7 @@
     <Content Include="Models\Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
     </Content>
+    <Content Include="Areas\User\Views\HomeUser\invoice.cshtml" />
     <None Include="Properties\PublishProfiles\hosithao-001-site1 - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\hosithao-001-site1 - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.7.1.intellisense.js" />
