--- a/PPl3/PPl3.csproj
+++ b/PPl3/PPl3.csproj
@@ -407,6 +407,7 @@
     <Content Include="Content\bootstrap.rtl.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
     <Content Include="ExtraFiles\assets\css\book_room.css" />
+    <Content Include="ExtraFiles\assets\css\comfirmForm.css" />
     <Content Include="ExtraFiles\assets\css\editProfile.css" />
     <Content Include="ExtraFiles\assets\css\gird.css" />
     <Content Include="ExtraFiles\assets\css\headerGuest.css" />
@@ -418,6 +419,7 @@
     <Content Include="ExtraFiles\assets\css\paysuccessstyle.css" />
     <Content Include="ExtraFiles\assets\css\product.css" />
     <Content Include="ExtraFiles\assets\css\profile.css" />
+    <Content Include="ExtraFiles\assets\css\ResetPass.css" />
     <Content Include="ExtraFiles\assets\css\revenue.css" />
     <Content Include="ExtraFiles\assets\css\seller_profile.css" />
     <Content Include="ExtraFiles\assets\css\Sign_Log_v1.css" />
@@ -556,6 +558,7 @@
     <Content Include="Areas\User\Views\HomeUser\PaymentSuccess.cshtml" />
     <Content Include="Areas\User\Views\HomeUser\PaymentFail.cshtml" />
     <Content Include="Areas\User\Views\HomeUser\notification.cshtml" />
+    <Content Include="Areas\User\Views\HomeUser\invoice.cshtml" />
     <EntityDeploy Include="Models\Model1.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>Model1.Designer.cs</LastGenOutput>
@@ -563,7 +566,8 @@
     <Content Include="Models\Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
     </Content>
-    <Content Include="Areas\User\Views\HomeUser\invoice.cshtml" />
+    <Content Include="Areas\User\Views\HomeUser\comfirmEmailForm.cshtml" />
+    <Content Include="Areas\User\Views\HomeUser\sendPassword.cshtml" />
     <None Include="Properties\PublishProfiles\hosithao-001-site1 - FTP1.pubxml" />
     <None Include="Properties\PublishProfiles\hosithao-001-site1 - Web Deploy1.pubxml" />
     <None Include="Scripts\jquery-3.7.1.intellisense.js" />
