--- a/PPl3/PPl3.csproj
+++ b/PPl3/PPl3.csproj
@@ -235,6 +235,12 @@
     <Compile Include="Models\booking_guests.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\browser_becomes_host.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Browse_hotel_listings.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\category.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -406,12 +412,15 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrap.rtl.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
+    <Content Include="ExtraFiles\admin.html" />
+    <Content Include="ExtraFiles\assets\css\admin.css" />
     <Content Include="ExtraFiles\assets\css\book_room.css" />
     <Content Include="ExtraFiles\assets\css\comfirmForm.css" />
     <Content Include="ExtraFiles\assets\css\editProfile.css" />
     <Content Include="ExtraFiles\assets\css\gird.css" />
     <Content Include="ExtraFiles\assets\css\headerGuest.css" />
     <Content Include="ExtraFiles\assets\css\hotel.css" />
+    <Content Include="ExtraFiles\assets\css\invoice.css" />
     <Content Include="ExtraFiles\assets\css\Listing.css" />
     <Content Include="ExtraFiles\assets\css\message.css" />
     <Content Include="ExtraFiles\assets\css\notification.css" />
@@ -486,6 +495,7 @@
     <Content Include="ExtraFiles\hotel.html" />
     <Content Include="ExtraFiles\hotel1.html" />
     <Content Include="ExtraFiles\index.html" />
+    <Content Include="ExtraFiles\JS\admin.js" />
     <Content Include="ExtraFiles\JS\calendar.js" />
     <Content Include="ExtraFiles\JS\editProfile.js" />
     <Content Include="ExtraFiles\JS\first_header.js" />
@@ -509,6 +519,7 @@
     <Content Include="ExtraFiles\JS\wishList.js" />
     <Content Include="ExtraFiles\Listing.html" />
     <Content Include="ExtraFiles\message.html" />
+    <Content Include="ExtraFiles\notification.html" />
     <Content Include="ExtraFiles\Product.html" />
     <Content Include="ExtraFiles\revenue.html" />
     <Content Include="ExtraFiles\Sign_Log.html" />
