--- a/PPl3/Web.config
+++ b/PPl3/Web.config
@@ -31,7 +31,7 @@
   -->
   <system.web>
 	<compilation debug="true" targetFramework="4.8" />
-	<httpRuntime targetFramework="4.8" />
+	<httpRuntime targetFramework="4.8" maxQueryStringLength="1048576" />
   </system.web>
   <runtime>
 	<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
