Finished commenting on hotel reviews

--- a/PPl3/PPl3.csproj
+++ b/PPl3/PPl3.csproj
@@ -360,6 +360,9 @@
     <Compile Include="Models\state.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\sysdiagram.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\transaction.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -415,6 +418,7 @@
     <Content Include="ExtraFiles\assets\css\book_room.css" />
     <Content Include="ExtraFiles\assets\css\comfirmForm.css" />
     <Content Include="ExtraFiles\assets\css\editProfile.css" />
+    <Content Include="ExtraFiles\assets\css\evaluate.css" />
     <Content Include="ExtraFiles\assets\css\gird.css" />
     <Content Include="ExtraFiles\assets\css\headerGuest.css" />
     <Content Include="ExtraFiles\assets\css\hotel.css" />
@@ -490,12 +494,14 @@
     <Content Include="ExtraFiles\assets\video_3d\KeNKUpa01dRaT5g00SSBV95FqXYkqf01DJdzn01F1aT00vCI.mp4" />
     <Content Include="ExtraFiles\assets\video_3d\zFaydEaihX6LP01x8TSCl76WHblb01Z01RrFELxyCXoNek.mp4" />
     <Content Include="ExtraFiles\editProfile.html" />
+    <Content Include="ExtraFiles\evaluate.html" />
     <Content Include="ExtraFiles\hotel.html" />
     <Content Include="ExtraFiles\hotel1.html" />
     <Content Include="ExtraFiles\index.html" />
     <Content Include="ExtraFiles\JS\admin.js" />
     <Content Include="ExtraFiles\JS\calendar.js" />
     <Content Include="ExtraFiles\JS\editProfile.js" />
+    <Content Include="ExtraFiles\JS\evaluate.js" />
     <Content Include="ExtraFiles\JS\first_header.js" />
     <Content Include="ExtraFiles\JS\hotel.js" />
     <Content Include="ExtraFiles\JS\imgSlide.js" />
@@ -579,6 +585,7 @@
     <Content Include="Areas\User\Views\HomeUser\sendPassword.cshtml" />
     <Content Include="Areas\Admin\Views\HomeAdmin\AccpectHost.cshtml" />
     <Content Include="Areas\Admin\Views\HomeAdmin\AccpectHotel.cshtml" />
+    <Content Include="Areas\User\Views\HomeUser\Comment.cshtml" />
     <None Include="Properties\PublishProfiles\hosithao-001-site1 - FTP1.pubxml" />
     <None Include="Properties\PublishProfiles\hosithao-001-site1 - Web Deploy1.pubxml" />
     <None Include="Scripts\jquery-3.7.1.intellisense.js" />
