--- a/PPl3/PPl3.csproj
+++ b/PPl3/PPl3.csproj
@@ -360,9 +360,6 @@
     <Compile Include="Models\state.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\sysdiagram.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
     <Compile Include="Models\transaction.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -574,6 +571,11 @@
     <Content Include="Areas\User\Views\HomeUser\PaymentFail.cshtml" />
     <Content Include="Areas\User\Views\HomeUser\notification.cshtml" />
     <Content Include="Areas\User\Views\HomeUser\invoice.cshtml" />
+    <Content Include="Areas\User\Views\HomeUser\comfirmEmailForm.cshtml" />
+    <Content Include="Areas\User\Views\HomeUser\sendPassword.cshtml" />
+    <Content Include="Areas\Admin\Views\HomeAdmin\AccpectHost.cshtml" />
+    <Content Include="Areas\Admin\Views\HomeAdmin\AccpectHotel.cshtml" />
+    <Content Include="Areas\User\Views\HomeUser\Comment.cshtml" />
     <EntityDeploy Include="Models\Model1.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>Model1.Designer.cs</LastGenOutput>
@@ -581,11 +583,9 @@
     <Content Include="Models\Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
     </Content>
-    <Content Include="Areas\User\Views\HomeUser\comfirmEmailForm.cshtml" />
-    <Content Include="Areas\User\Views\HomeUser\sendPassword.cshtml" />
-    <Content Include="Areas\Admin\Views\HomeAdmin\AccpectHost.cshtml" />
-    <Content Include="Areas\Admin\Views\HomeAdmin\AccpectHotel.cshtml" />
-    <Content Include="Areas\User\Views\HomeUser\Comment.cshtml" />
+    <Content Include="Areas\Admin\Views\HomeAdmin\revenue.cshtml" />
+    <Content Include="Areas\Admin\Views\HomeAdmin\invoice.cshtml" />
+    <Content Include="Areas\Admin\Views\HomeAdmin\userPersonalProfile.cshtml" />
     <None Include="Properties\PublishProfiles\hosithao-001-site1 - FTP1.pubxml" />
     <None Include="Properties\PublishProfiles\hosithao-001-site1 - Web Deploy1.pubxml" />
     <None Include="Scripts\jquery-3.7.1.intellisense.js" />
