--- a/PPl3/bin/PPl3.dll.config
+++ b/PPl3/bin/PPl3.dll.config
@@ -91,7 +91,7 @@
 	  
   
 	  <!--<add name="PPL3Entities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SQL8010.site4now.net	;initial catalog=db_aa87aa_hosithao;persist security info=True;user id=db_aa87aa_hosithao_admin;password=Thao1234567890@;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-<add name="PPL3Entities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-FP7T5TD4\SQLEXPRESS;initial catalog=Thelast;persist security info=True;user id=sa;password=vuigame1;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+<add name="PPL3Entities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-NG0LH2VR\SQLEXPRESS;initial catalog=PPL3;persist security info=True;user id=sa;password=0838664246;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
 	<defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
 	<providers>
