Completed host statistics

--- a/PPl3/Web.config
+++ b/PPl3/Web.config
@@ -87,11 +87,12 @@
 	  <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
 	</compilers>
   </system.codedom>
-  <connectionStrings>
-	  
-  
-	  <!--<add name="PPL3Entities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SQL8010.site4now.net	;initial catalog=db_aa87aa_hosithao;persist security info=True;user id=db_aa87aa_hosithao_admin;password=Thao1234567890@;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-<add name="PPL3Entities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-NG0LH2VR\SQLEXPRESS;initial catalog=PPL3;persist security info=True;user id=sa;password=0838664246;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+	<connectionStrings>
+
+
+		<!--<add name="PPL3Entities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SQL8010.site4now.net	;initial catalog=db_aa87aa_hosithao;persist security info=True;user id=db_aa87aa_hosithao_admin;password=Thao1234567890@;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+
+	<add name="PPL3Entities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-NG0LH2VR\SQLEXPRESS;initial catalog=PPl3;persist security info=True;user id=sa;password=0838664246;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
 	<defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
 	<providers>
